Change styling for score panel, update score after losing.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
       text-align: center;
       left: 431px;
       top: 590px;
-    }
+      background-image:
+        -webkit-linear-gradient(top, #FFF 0%, #A5A4A1 100%);
+      }
 
     canvas {
       position: absolute;
