--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="vendor/keymaster.js"></script>
     <script src="lib/inherits.js"></script>
     <script src="lib/moving_object.js"></script>
+    <script src="lib/explosion_particle.js"></script>
     <script src="lib/asteroid.js"></script>
     <script src="lib/bullet.js"></script>
     <script src="lib/ship.js"></script>
