Add arrow key movement functionality

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h1>:: Asteroids ::</h1>
     <h3>Help Kirby save the planet Earth!</h3>
     <ul>
-      <li>'w a s d' keys to move</li>
+      <li>'w a s d' or arrow keys to move</li>
       <li>'space bar' to shoot</li>
     </ul>
 
